--- a/HW4/2103405_HW4-2024.ipynb
+++ b/HW4/2103405_HW4-2024.ipynb
@@ -1370,12 +1370,17 @@
       },
       "source": [
         "|Model name|Hyperparameters cfg|# parameters|Accuracy (Tr)|Accuracy (Val)|Training time|\n",
-        "|-||-|-|-|-|\n",
-        "|Simple RNN|emb_dim = 10, hidden_size = 32, num_layers = 2, RNN_type = 'Simple RNN', rnn_dropout = 0.5, lr = 1e-4|103,553|67.61%|66.39%|1175.269505333|\n",
-        "|Simple RNN|emb_dim = 10, hidden_size = 32, num_layers = 2, RNN_type = 'Simple RNN', rnn_dropout = 0.2, lr = 1e-4|103,553|71.53%|70.05%|1153.2864225430003|\n",
+        "|-|-|-|-|-|-|\n",
         "|Simple RNN|emb_dim = 20, hidden_size = 32, num_layers = 2, RNN_type = 'Simple RNN', rnn_dropout = 0.5, lr = 1e-4|203,873|72.11%|67.89%|1138.4689103989997|\n",
         "|LSTM|emb_dim = 20, hidden_size = 32, num_layers = 2, RNN_type = 'LSTM', rnn_dropout = 0.5, lr = 1e-4|215,393|85.47%|82.94%|1180.260169741|\n",
-        "|GRU|emb_dim = 20, hidden_size = 32, num_layers = 2, RNN_type = 'GRU', rnn_dropout = 0.5, lr = 1e-4|211,553|87.78%|83.99%|1279.088915246|"
+        "|GRU|emb_dim = 20, hidden_size = 32, num_layers = 2, RNN_type = 'GRU', rnn_dropout = 0.5, lr = 1e-4|211,553|87.78%|83.99%|1279.088915246|\n",
+        "\n",
+        "## Discussion:\n",
+        "The initial model, which was developed in the first task, employs a Simple RNN as the RNN_type and has a minimal number of parameters. However, the validation accuracy was lower than that achieved in the previous exercise.\n",
+        "\n",
+        "Therefore, I decided to experiment with different types of RNN. The LSTM type yielded higher accuracy in both validation and training. The GRU type further improved the accuracies while using fewer parameters. Consequently, I have decided to retain this model, as it has demonstrated excellent results without any overfitting issues.\n",
+        "\n",
+        "I didn't change the other parameters in order to keep enough GPU time for the next exercise, which required a significant number of attempts and on Google Colab, the GPU time is extremely limited."
       ]
     },
     {
@@ -1964,7 +1969,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
